增加导航条，增加关于我页面，修改部分页面样式。

--- a/_posts/互联网/2015-05-01-internet.md
+++ b/_posts/互联网/2015-05-01-internet.md
@@ -5,6 +5,8 @@ tagline: "this is a tagline."
 tags : [web, 互联网]
 excerpt : 'test'
 title_cn: 互联网测试
+comments : false
+analytics : false
 ---
 {% include JB/setup %}
 
