--- a/_posts/编程语言/2015-06-10-jvm-gc.md
+++ b/_posts/编程语言/2015-06-10-jvm-gc.md
@@ -362,7 +362,7 @@ public class GCTimeTest {
 
 # GC 相关参数总结
 
-1. 与串行回收器相关的参数
+1、 与串行回收器相关的参数
 
 * -XX:+UseSerialGC:在新生代和老年代使用串行回收器。
 * -XX:+SuivivorRatio:设置 eden 区大小和 survivor 区大小的比例。
@@ -371,7 +371,7 @@ public class GCTimeTest {
 
 任何大于这个年龄的对象，一定会进入老年代。
 
-2. 与并行 GC 相关的参数
+2、 与并行 GC 相关的参数
 
 * -XX:+UseParNewGC: 在新生代使用并行收集器。
 * -XX:+UseParallelOldGC: 老年代使用并行回收收集器。
@@ -380,7 +380,7 @@ public class GCTimeTest {
 * -XX:GCTimeRatio:设置吞吐量大小，它的值是一个 0-100 之间的整数。假设 GCTimeRatio 的值为 n，那么系统将花费不超过 1/(1+n) 的时间用于垃圾收集。
 * -XX:+UseAdaptiveSizePolicy:打开自适应 GC 策略。在这种模式下，新生代的大小，eden 和 survivor 的比例、晋升老年代的对象年龄等参数会被自动调整，以达到在堆大小、吞吐量和停顿时间之间的平衡点。
 
-3. 与 CMS 回收器相关的参数
+3、 与 CMS 回收器相关的参数
 
 * -XX:+UseConcMarkSweepGC: 新生代使用并行收集器，老年代使用 CMS+串行收集器。
 * -XX:+ParallelCMSThreads: 设定 CMS 的线程数量。
@@ -392,14 +392,14 @@ public class GCTimeTest {
 * -XX:UseCMSInitatingOccupancyOnly:表示只在到达阈值的时候，才进行 CMS 回收。
 * -XX:+CMSIncrementalMode:使用增量模式，比较适合单 CPU。
 
-4. 与 G1 回收器相关的参数
+4、 与 G1 回收器相关的参数
 
 * -XX:+UseG1GC：使用 G1 回收器。
 * -XX:+UnlockExperimentalVMOptions:允许使用实验性参数。
 * -XX:+MaxGCPauseMills:设置最大垃圾收集停顿时间。
 * -XX:+GCPauseIntervalMills:设置停顿间隔时间。
 
-5. 其他参数
+5、 其他参数
 
 -XX:+DisableExplicitGC: 禁用显示 GC。
 
