修改首页内容

--- a/_posts/编程语言/2015-06-10-jvm-gc.md
+++ b/_posts/编程语言/2015-06-10-jvm-gc.md
@@ -5,6 +5,7 @@ tagline:
 tags : [JVM, 垃圾回收]
 excerpt : 
 title_cn: JVM垃圾回收器工作原理及使用实例介绍 
+description: 本文首先介绍了JVM各类垃圾回收器及其工作原理，接着通过实例演示它们的使用方式及需注意事项，最后总结了垃圾回收器的配置方式及参数意义。
 ---
 {% include JB/setup %}
 
